# cignaler

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.mjs  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: stage-native-host.mjs
src/: App.svelte  app.css  main.ts  setupTests.ts
src-tauri/: Cargo.toml  build.rs  cignaler.db  tauri.conf.json
src-tauri/binaries/: cignaler-native-host-x86_64-unknown-linux-gnu
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  error.rs  gitlab_client.rs  lib.rs  main.rs  models.rs  pipeline_cache.rs
src/lib/: Config.svelte  ConfigModal.svelte  Configs.svelte  Greet.svelte  Pipeline.svelte  Pipelines.svelte  PreferencesModal.svelte  WatcherModal.svelte  WatchersSidebar.svelte  deep-link-handler.ts
src/lib/__tests__/: toast.test.ts  watchers.test.ts
src/lib/components/icons/: EditIcon.svelte  PullRequestIcon.svelte  ServerIcon.svelte
src/lib/components/ui/: Badge.svelte  Button.svelte  Checkbox.svelte  Combobox.svelte  ConfirmDialog.svelte  Dropdown.svelte  Indicator.svelte  Input.svelte  Label.svelte  Modal.svelte  Select.svelte  Toast.svelte  ToastContainer.svelte
src/lib/stores/: pipelines.svelte.ts  toast.svelte.ts  watchers.svelte.ts
