[package]
name = "cignaler"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0"
gitlab = "0.1806.0"
tauri-plugin-shell = "2.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
