[package]
name = "cignaler"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0"
gitlab = "0.1806.0"
tauri-plugin-shell = "2.3.3"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "sync"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
